syntax = "proto3";
package core.solo.io;
option go_package = "github.com/solo-io/solo-kit/pkg/api/v1/resources/core";

// This file contains Options for Proto Messages/Fields/Enums for use with Solo-Kit

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
    // options for a message that's intended to become a solo-kit resource
    Resource resource = 10000;
}

message Resource {
    // becomes the kubernetes short name for the generated crd
    string short_name = 1;
    // becomes the kubernetes plural name for the generated crd
    string plural_name = 2;
    // the resource lives at the cluster level, namespace is ignored by the server
    bool cluster_scoped = 3;
    // indicates whether documentation generation has to be skipped for the given resource, defaults to false
    bool skip_docs_gen = 4;
}

extend google.protobuf.FieldOptions {
    bool skip_hashing = 10000;
}
